--- a/client/src/components/newFood.css
+++ b/client/src/components/newFood.css
@@ -24,12 +24,18 @@
     color: white;
 }
 
-#select {
+#select1 {
     margin-top: 32px;
-    width: 50%
+
+}
+
+#select2 {
+    margin-top: 32px;
+
 }
 
 #form {
     margin-left: 100px;
+    margin-right: 100px;
     margin-top: 30px;
 }
